<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_nearby"
        android:enabled="true"
        android:icon="@drawable/ic_near_me_black_24dp"
        android:title="@string/menu_nearby"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_recent"
        android:enabled="true"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/menu_recent"
        app:showAsAction="ifRoom" />
</menu>