<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/status_no_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <!-- Icon -->
    <ImageView
        android:layout_width="@dimen/warning_icon_size"
        android:layout_height="@dimen/warning_icon_size"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:scaleType="fitXY"
        android:src="@drawable/ic_location_off_black_24dp" />
    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/status_no_location_title"
        android:textSize="@dimen/h3_text_size"
        android:textStyle="bold" />
    <!-- Description -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/status_no_location_desc"
        android:textSize="@dimen/normal_text_size" />
    <!-- Retry Button -->
    <Button
        android:id="@+id/retry_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry_button_text" />
</LinearLayout>