<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_inspection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="edu.sjsu.cs175.sfhealthscores.activities.InspectionActivity">
        <!-- Header -->
        <LinearLayout
            android:id="@+id/inspection_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inspection_header_size"
            android:background="@color/gray"
            android:gravity="center"
            android:orientation="vertical">
            <!-- Score -->
            <TextView
                android:id="@+id/inspection_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="99"
                android:textColor="@color/white"
                android:textSize="@dimen/h1_text_size" />
            <!-- Date -->
            <TextView
                android:id="@+id/inspection_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Inspection Date"
                android:textColor="@color/white"
                android:textSize="@dimen/h3_text_size"
                android:textStyle="bold" />
            <!-- Type -->
            <TextView
                android:id="@+id/inspection_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Inspection Type"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text_size" />
        </LinearLayout>
        <!-- Violation Info -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Violation Text -->
            <TextView
                android:id="@+id/inspection_violation_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="Violations"
                android:textSize="@dimen/h3_text_size"
                android:textStyle="bold" />
            <!-- Loading Spinner -->
            <ProgressBar
                android:id="@+id/inspection_loader_spinner"
                style="@style/LoadingSpinner"
                android:layout_below="@id/inspection_violation_text"
                android:visibility="visible" />
            <!-- Violation Data -->
            <LinearLayout
                android:id="@+id/inspection_violation_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inspection_violation_text"
                android:orientation="vertical">
                <!-- Risk Count -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <!-- High -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">
                        <!-- High Count -->
                        <TextView
                            android:id="@+id/inspection_high"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="@dimen/h2_text_size" />
                        <!-- High Text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/inspection_high" />
                    </LinearLayout>
                    <!-- Moderate -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">
                        <!-- Moderate Count -->
                        <TextView
                            android:id="@+id/inspection_moderate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="@dimen/h2_text_size" />
                        <!-- Moderate Text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/inspection_moderate" />
                    </LinearLayout>
                    <!-- Low -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">
                        <!-- Low Count -->
                        <TextView
                            android:id="@+id/inspection_low"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="@dimen/h2_text_size" />
                        <!-- Low Text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/inspection_low" />
                    </LinearLayout>
                </LinearLayout>

                <View style="@style/Divider" />
                <!-- Violation Recycler View -->
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/inspection_violation_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
